fix z-index of option

--- a/browser/main/Detail/FolderSelect.styl
+++ b/browser/main/Detail/FolderSelect.styl
@@ -51,7 +51,7 @@
 .search-optionList
   position fixed
   border $ui-border
-  z-index 10
+  z-index 200
   background-color white
   border-radius 5px
 
